# L2_Projet_ProgAv-S3

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
Code_donnee_au_debut/: main.c  main2.c
Code_donnee_au_debut/Lalgorithme_principal/: main.c  main2.c
Code_donnee_au_debut/Version_prog_dyn_stat/: space_array_3.c  space_array_4.c  space_array_5.c
Code_donnee_au_debut/Version_prog_dyn_stat/array/: dp_array.c  space_array.c  space_array.h  space_array_1.c  space_array_2.c  space_array_3.c  space_array_4.c  space_array_5.c
Code_donnee_au_debut/Version_recursive/: dp_rec2.c  global.h  objects.c
Code_donnee_au_debut/Version_recursive/rec/: bag.h  dp_rec.c  dp_rec2.c  objects.c  objects.h
Code_donnee_au_debut/dp_array/: space_array.c  space_array.h  space_array_1.c  space_array_3.c  space_array_4.c  space_array_5.c
Code_donnee_au_debut/rec/: dp_rec.c  dp_rec2.c  objects.c  objects.h  objects_2.c  prec.h
include/: bag.h  dp_array.h  dp_list.h  dp_rec.h  elmlist.h  global.h  list.h  objects.h  outils.h  prec.h  space_array.h  states.h
src/: bag.c  dp_array.c  dp_list.c  dp_rec.c  elmlist.c  list.c  main.c  objects.c  outils.c  space_array.c  states.c
